# internet_testing

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  real_site_agent_findings.md
docs/superpowers/plans/: 2026-05-18-openai-llm-test-generation.md
examples/: test_generated_indian_sites.py  test_generated_live_amazon_in_deep.py  test_generated_live_flipkart_deep.py  test_generated_live_swiggy.py
src/internet_testing/: __init__.py  agent_tools.py  analyzer.py  cli.py  explorer.py  generator.py  openai_generator.py  webapp.py
tests/: test_agent_tools.py  test_deep_exploration_and_llm.py  test_dom_to_playwright.py  test_webapp.py
tests/fixtures/: swiggy_complex.html  zomato_complex.html
