[project]
name = "internet-testing"
version = "0.1.0"
description = "Deterministic website DOM explorer and Playwright test generator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.37.0",
    "playwright>=1.52.0",
]

[project.scripts]
internet-testing = "internet_testing.cli:main"
internet-testing-web = "internet_testing.webapp:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-playwright>=0.7.2",
]
